# nichy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.publish  Dockerfile.rust  LICENSE  README.md  flake.nix  nichy-web.toml
.cargo/: config.toml
crates/nichy/: Cargo.toml
crates/nichy-cli/: Cargo.toml
crates/nichy-cli/src/: main.rs  render.rs  serve.rs
crates/nichy-rustc/: Cargo.toml
crates/nichy-rustc/src/: convert.rs  extract.rs  lib.rs
crates/nichy-rustc/tests/: integration.rs
crates/nichy-web/: Cargo.toml  build.rs
crates/nichy-web/src/: cache.rs  config.rs  db.rs  hash.rs  main.rs  pool.rs  runner.rs  snippets.rs  stats.rs
crates/nichy-web/static/: about.html  common.css  common.js  index.html  stats.html
crates/nichy/src/: lib.rs
