[package]
name = "nichy-cli"
version = "0.1.3"
edition = "2024"
description = "CLI for nichy"
license = "MIT"
repository = "https://github.com/el-ev/nichy"
publish = false

[[bin]]
name = "nichy"
path = "src/main.rs"

[dependencies]
nichy = { path = "../nichy" }
nichy-rustc = { path = "../nichy-rustc" }
serde_json = "1"

[target.'cfg(rust_analyzer)'.dependencies]
rustc_driver = { path = "../../rust/compiler/rustc_driver" }