[package]
name = "nichy-web"
version = "0.1.5"
edition = "2024"
description = "Web service for nichy"
license = "MIT"
repository = "https://github.com/el-ev/nichy"
publish = false

[[bin]]
name = "nichy-web"
path = "src/main.rs"

[dependencies]
nichy = { path = "../nichy" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "limit"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
proc-macro2 = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
